--- a/index.html
+++ b/index.html
@@ -200,11 +200,11 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">سلمان</div>
+                <div class="player-name">جرافي</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">ابن بطوطه</div>
+                <div class="player-name">عصام</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
@@ -212,15 +212,15 @@
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">ابراهيم</div>
+                <div class="player-name">سنده</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">جاتشن</div>
+                <div class="player-name">وادفور</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">رزقه | وادفور</div>
+                <div class="player-name">سليمان</div>
               </div>
             </div>
           </div>
@@ -236,27 +236,27 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">سليمان</div>
+                <div class="player-name">جاتشن</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">سنده</div>
+                <div class="player-name">سلمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">الرشيد</div>
+                <div class="player-name">ابراهيم</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">جرافي</div>
+                <div class="player-name">ابن بطوطه</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">عصام</div>
+                <div class="player-name">الرشيد</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">رزقه | وادفور</div>
+                <div class="player-name">رزقه</div>
               </div>
             </div>
           </div>
