--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
       <!-- Teams Section -->
       <section class="teams-section">
         <div class="match-info">
-          <h1 class="match-title">تمرين الأحد 11/01</h1>
+          <h1 class="match-title">تمرين الأحد 18/01</h1>
           <div class="match-details">
-            <span class="time">ASV 02:30 PM</span>
+            <span class="time">Strikers 02:30 PM</span>
           </div>
         </div>
 
@@ -200,39 +200,27 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">الشيخ</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">2</div>
-                <div class="player-name">عبدالرحمن</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">3</div>
                 <div class="player-name">سليمان</div>
               </div>
               <div class="player-card">
-                <div class="player-number">4</div>
-                <div class="player-name">اواب</div>
+                <div class="player-number">2</div>
+                <div class="player-name">مصطفى</div>
               </div>
               <div class="player-card">
-                <div class="player-number">5</div>
+                <div class="player-number">3</div>
                 <div class="player-name">عثمان</div>
               </div>
               <div class="player-card">
-                <div class="player-number">6</div>
-                <div class="player-name">الرشيد</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">7</div>
+                <div class="player-number">4</div>
                 <div class="player-name">جرافي</div>
               </div>
               <div class="player-card">
-                <div class="player-number">8</div>
-                <div class="player-name">قايد</div>
+                <div class="player-number">5</div>
+                <div class="player-name">وادفور</div>
               </div>
               <div class="player-card">
-                <div class="player-number">9</div>
-                <div class="player-name">رزقه | ودفور</div>
+                <div class="player-number">6</div>
+                <div class="player-name">رزقه | احمد بشير</div>
               </div>
             </div>
         </div>
@@ -248,39 +236,27 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">محمد عوض</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">2</div>
-                <div class="player-name">محمد نايل</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">3</div>
                 <div class="player-name">سلمان</div>
               </div>
               <div class="player-card">
+                <div class="player-number">2</div>
+                <div class="player-name">وائل</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">3</div>
+                <div class="player-name">جاك</div>
+              </div>
+              <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">خالد</div>
+                <div class="player-name">جوهر</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">ابراهيم</div>
+                <div class="player-name">جاتشن</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">ابوالقاسم</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">7</div>
-                <div class="player-name">عصام</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">8</div>
-                <div class="player-name">مازن</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">9</div>
-                <div class="player-name">رزقه | ودفور</div>
+                <div class="player-name">رزقه | احمد بشير</div>
               </div>
             </div>
           </div>
@@ -296,21 +272,6 @@
               <h3>احتياط</h3>
             </div>
             <div class="bench-players">
-              <div class="bench-player">
-                <span class="bench-name">مصطفى</span>
-              </div>
-              <div class="bench-player">
-                <span class="bench-name">وائل</span>
-              </div>
-              <div class="bench-player">
-                <span class="bench-name">جاك</span>
-              </div>
-              <div class="bench-player">
-                <span class="bench-name">جوهر</span>
-              </div>
-              <div class="bench-player">
-                <span class="bench-name">حسام</span>
-              </div>         
             </div>
             </div>
         </div>
