--- a/previous-matches.html
+++ b/previous-matches.html
@@ -36,6 +36,91 @@
     <main class="main-content">
       <!-- Previous Matches Section -->
       <section class="previous-matches-section">
+        <!-- Match - ASV 11/01 (Yellow won 4-0) -->
+        <div class="match-card">
+          <div class="match-details">
+            <span class="match-date">الأحد 11/01/2025</span>
+            <span class="match-venue">ASV 02:30 PM</span>
+          </div>
+
+          <div class="teams-row">
+            <div class="team-name red-team">الفريق الأحمر</div>
+            <div class="team-name yellow-team">الفريق الأصفر</div>
+          </div>
+
+          <div class="score-row">
+            <div class="score red-score">0</div>
+            <div class="score-separator">-</div>
+            <div class="score yellow-score">4</div>
+            <div class="score-label">النتيجه</div>
+          </div>
+
+          <div class="players-section">
+            <div class="players-column red-team-column">
+              <div class="player-row red-player">
+                <span class="player-name">محمد عوض</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">محمد نايل</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">سلمان</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">خالد</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">ابراهيم</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">ابوالقاسم</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">عصام</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">مازن</span>
+              </div>
+              <div class="player-row red-player">
+                <span class="player-name">وادفور</span>
+              </div>
+            </div>
+            <div class="players-column yellow-team-column">
+              <div class="player-row yellow-player">
+                <span class="player-name">الشيخ</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">عبدالرحمن</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">سليمان</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">اواب</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">عثمان</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">الرشيد</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">جرافي</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">قايد</span>
+              </div>
+              <div class="player-row yellow-player">
+                <span class="player-name">رزقه</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="jerseys-row">
+            <span class="jerseys-info">الفنايل <i class="fas fa-tshirt"></i> جرافي</span>
+          </div>
+        </div>
+
         <!-- Match - ASV 31/12 (Draw 0-0) -->
         <div class="match-card">
           <div class="match-details">
@@ -117,7 +202,8 @@
           </div>
 
           <div class="jerseys-row">
-            <span class="jerseys-info">الفنايل <i class="fas fa-tshirt"></i> عثمان</span>
+            <span class="jerseys-info">الفنايل <i class="fas fa-tshirt"></i> سندا
+            </span>
           </div>
         </div>
 
