--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <!-- Teams Section -->
       <section class="teams-section">
         <div class="match-info">
-          <h1 class="match-title">تمرين الأربعاء 21/01</h1>
+          <h1 class="match-title">تمرين الخميس 29/01</h1>
           <div class="match-details">
             <span class="time">ASV 09:30 PM</span>
           </div>
@@ -200,39 +200,39 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">مصطفى</div>
+                <div class="player-name">سلمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">ابن بطوطه</div>
+                <div class="player-name">وائل</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">سليمان</div>
+                <div class="player-name">محمد نايل</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">محمد عوض</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">5</div>
-                <div class="player-name">ابراهيم معتصم</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">6</div>
-                <div class="player-name">جرافي</div>
-              </div>
-              <div class="player-card">
-                <div class="player-number">7</div>
                 <div class="player-name">ابوالقاسم</div>
               </div>
               <div class="player-card">
+                <div class="player-number">5</div>
+                <div class="player-name">ابراهيم مضوي</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">6</div>
+                <div class="player-name">خالد</div>
+              </div>
+              <div class="player-card">
+                <div class="player-number">7</div>
+                <div class="player-name">ابن بطوطه</div>
+              </div>
+              <div class="player-card">
                 <div class="player-number">8</div>
-                <div class="player-name">اواب</div>
+                <div class="player-name">عزام</div>
               </div>
               <div class="player-card">
                 <div class="player-number">9</div>
-                <div class="player-name">احمد عبدالله</div>
+                <div class="player-name">رزقه | انور</div>
               </div>
             </div>
         </div>
@@ -248,39 +248,39 @@
             <div class="players-grid two-columns">
               <div class="player-card">
                 <div class="player-number">1</div>
-                <div class="player-name">سندا</div>
+                <div class="player-name">سليمان</div>
               </div>
               <div class="player-card">
                 <div class="player-number">2</div>
-                <div class="player-name">ودفور</div>
+                <div class="player-name">محمد عوض</div>
               </div>
               <div class="player-card">
                 <div class="player-number">3</div>
-                <div class="player-name">مازن بس</div>
+                <div class="player-name">سندا</div>
               </div>
               <div class="player-card">
                 <div class="player-number">4</div>
-                <div class="player-name">محمد نايل</div>
+                <div class="player-name">ابراهيم معتصم</div>
               </div>
               <div class="player-card">
                 <div class="player-number">5</div>
-                <div class="player-name">جاك</div>
+                <div class="player-name">جرافي</div>
               </div>
               <div class="player-card">
                 <div class="player-number">6</div>
-                <div class="player-name">ابراهيم مضوي</div>
+                <div class="player-name">اواب</div>
               </div>
               <div class="player-card">
                 <div class="player-number">7</div>
-                <div class="player-name">الرشيد</div>
+                <div class="player-name">احمد عبدالله</div>
               </div>
               <div class="player-card">
                 <div class="player-number">8</div>
-                <div class="player-name">خالد</div>
+                <div class="player-name">جمعه</div>
               </div>
               <div class="player-card">
                 <div class="player-number">9</div>
-                <div class="player-name">قايد</div>
+                <div class="player-name">رزقه | انور</div>
               </div>
             </div>
           </div>
@@ -297,7 +297,18 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
+                <span class="bench-name">جوهر</span>
+              </div>
+              <div class="bench-player">
                 <span class="bench-name">حسام</span>
+              </div>
+              <div class="bench-player">
+                <span class="bench-name">جاك</span>
+              </div> <div class="bench-player">
+                <span class="bench-name">فيصل</span>
+              </div>
+              <div class="bench-player">
+                <span class="bench-name">سموال</span>
               </div>
             </div>
             </div>
@@ -310,7 +321,7 @@
             </div>
             <div class="bench-players">
               <div class="bench-player">
-                <span class="bench-name">ابوالقاسم</span>
+                <span class="bench-name">وائل</span>
               </div>
             </div>
           </div>
@@ -395,11 +406,11 @@
             </tr>
             <tr>
               <td>ابوالقاسم</td>
-            <td><span class="status due">!</span></td>
-          </tr>
+              <td><span class="status done">✓</span></td>
+            </tr>
             <tr>
-                <td>وائل</td>
-                <td><span class="status unmarked">-</span></td>
+              <td>وائل</td>
+              <td><span class="status due">!</span></td>
             </tr>
             
             <tr>
